<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUser">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        tools:src="@tools:sample/avatars">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/item_username"
        style="@style/title"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:ellipsize="end"
        android:maxLines="5"
        app:layout_constraintBottom_toTopOf="@+id/img_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/item_name"
        style="@style/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/img_photo"
        app:layout_constraintBottom_toBottomOf="@+id/img_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toTopOf="@+id/img_photo"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/item_company"
        style="@style/contentsmall.Grey"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="end"
        android:maxLines="5"
        app:layout_constraintBottom_toBottomOf="@+id/img_photo"
        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/item_location"
        style="@style/contentsmall.Grey"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:ellipsize="end"
        android:maxLines="5"
        app:layout_constraintBottom_toBottomOf="@+id/img_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/item_company"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/location" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_location"
        app:layout_constraintVertical_bias="0.070">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/repository"
                style="@style/content"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:maxLines="1"
                app:drawableStartCompat="@drawable/ic_mdi_source_repository"
                tools:text="@string/repository"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:id="@+id/followers"
                style="@style/content"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:maxLines="1"
                app:drawableStartCompat="@drawable/ic_mdi_account_arrow_up"
                tools:text="@string/followers"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/following"
                style="@style/content"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:maxLines="1"
                app:drawableStartCompat="@drawable/ic_mdi_account_arrow_down"
                tools:text="@string/following"
                tools:ignore="RtlHardcoded" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/tab1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_favorite"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/favorite_github"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>